# pyside2-feedstock

./: .appveyor.yml  .recipe_maintainers.json  .travis.yml  README.md  appveyor.yml  azure-pipelines.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  build_steps.sh
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.14.____cp314.yaml  linux_64_python3.14.____cp314t.yaml  linux_64_python3.6.____cpython.yaml  linux_64_python3.7.____73_pypy.yaml  linux_64_python3.7.____cpython.yaml  linux_64_python3.8.____73_pypy.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____73_pypy.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cp313.yaml  linux_aarch64_python3.14.____cp314.yaml  linux_aarch64_python3.14.____cp314t.yaml  linux_aarch64_python3.7.____cpython.yaml  linux_aarch64_python3.8.____73_pypy.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____73_pypy.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_c_compilergcccxx_compilergxxpython2.7.yaml  linux_c_compilergcccxx_compilergxxpython3.6.yaml  linux_c_compilergcccxx_compilergxxpython3.7.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxxpython2.7.yaml  linux_python2.7.____cpython.yaml  (+82 more)
recipe/cmake_shiboken/: CMakeLists.txt  main.cxx
(+80 files in other folders)
